kubernetes running with frontend and connection to backend

--- a/frontend/frontend-svc-nodeport.yaml
+++ b/frontend/frontend-svc-nodeport.yaml
@@ -11,7 +11,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: backend
+    app: frontend
   type: NodePort
 status:
   loadBalancer: {}
