--- a/frontend/frontend-deployment.yaml
+++ b/frontend/frontend-deployment.yaml
@@ -20,3 +20,12 @@ spec:
         image: markusmunk/frontend:0.1
         ports:
         - containerPort: 8080
+        env:
+        
+        - name: "BACKEND_DNS"
+          valueFrom:
+            configMapKeyRef:
+              # The ConfigMap containing the value you want to assign to SPECIAL_LEVEL_KEY
+              name: backend-configmap
+              # Specify the key associated with the value
+              key: BACKEND_DNS
