--- a/frontend/configMap.yaml
+++ b/frontend/configMap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:  
   name: 
-    backend-configmap  
+    frontend-configmap  
 data:  
   BACKEND_DNS: backend-service
