--- a/frontend/frontend-deployment.yaml
+++ b/frontend/frontend-deployment.yaml
@@ -26,6 +26,6 @@ spec:
           valueFrom:
             configMapKeyRef:
               # The ConfigMap containing the value you want to assign to SPECIAL_LEVEL_KEY
-              name: backend-configmap
+              name: frontend-configmap
               # Specify the key associated with the value
               key: BACKEND_DNS
