--- a/backend/backend-deployment.yaml
+++ b/backend/backend-deployment.yaml
@@ -20,3 +20,9 @@ spec:
         image: markusmunk/backend:0.1
         ports:
         - containerPort: 9000
+        env:
+        - name: "REDIS_DNS"
+          valueFrom:
+            configMapKeyRef:
+              name: backend-configmap
+              key: REDIS_DNS
