add pvc-database and modified database to mount the volume to /data

--- a/database/database-deployment.yaml
+++ b/database/database-deployment.yaml
@@ -14,8 +14,15 @@ spec:
       labels:
         app: database      # label for replica selector to match
     spec:
+      volumes:
+      - name: redis-data
+        persistentVolumeClaim:
+          claimName: pvc-database
       containers:
       - name: database
         image: redis:latest
         ports:
         - containerPort: 6379
+        volumeMounts:
+        - mountPath: "/data"
+          name: redis-data
