--- a/.github/workflows/goCI.yaml
+++ b/.github/workflows/goCI.yaml
@@ -4,14 +4,27 @@ on:
     branches:
       - ci-for-dev
 jobs:
+  build-frontend:
+    runs-on: ubuntu-latest
+    container: golang:latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: build frontend
+        run: cd frontend/ && go build
+      - name: upload build
+        uses: actions/upload-artifact@v2
+        with:
+          name: app
+          path: .
   test-code:
       runs-on: ubuntu-latest
       container: golang:latest
       steps:
-        - uses: actions/checkout@v2
-        - run: pwd
-        - run: ls
-        - run: cd frontend/
+        - name: download-artifact
+          uses: actions/download-artifact@v2
+          with:
+            name: app
+            path: .
         - name: test main.go 
           run: go test
           
