--- a/.github/workflows/goCI.yaml
+++ b/.github/workflows/goCI.yaml
@@ -27,5 +27,5 @@ jobs:
           name: app
           path: .
       - name: test main.go 
-        run: go test
+        run: cd frontend/ && go test
         
