test with hardcoded tag

--- a/.github/workflows/goCI.yaml
+++ b/.github/workflows/goCI.yaml
@@ -52,4 +52,4 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
+          tags: markusmunk/app:latest
