--- a/.github/workflows/goCI.yaml
+++ b/.github/workflows/goCI.yaml
@@ -50,4 +50,4 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ${{ docker-image-backend }}:latest
+          tags: "${{ secrets.DOCKER_IMAGE_BACKEND }}:latest"
