--- a/.github/workflows/goCI.yaml
+++ b/.github/workflows/goCI.yaml
@@ -50,4 +50,4 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: "${{ secrets.DOCKER_IMAGE_BACKEND }}:${GITHUB_SHA}"
+          tags: "${{ secrets.DOCKER_IMAGE_BACKEND }}:${{ GITHUB_SHA }}"
