--- a/.github/workflows/goCI.yaml
+++ b/.github/workflows/goCI.yaml
@@ -45,9 +45,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push
+      - name: Build and push backend
         uses: docker/build-push-action@v2
         with:
           context: ./frontend
           push: true
           tags: "${{ secrets.DOCKER_IMAGE_BACKEND }}:latest"
+      - name: Build and push frontend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend
+          push: true
+          tags: "${{ secrets.DOCKER_IMAGE_FRONTEND }}:latest"
