--- a/.github/workflows/goCI.yaml
+++ b/.github/workflows/goCI.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Build and push backend
         uses: docker/build-push-action@v2
         with:
-          context: ./frontend
+          context: ./backend
           push: true
           tags: "${{ secrets.DOCKER_IMAGE_BACKEND }}:latest"
       - name: Build and push frontend
