--- a/.github/workflows/co.yaml
+++ b/.github/workflows/co.yaml
@@ -9,6 +9,27 @@ on:
     branches:
       - co-for-main
 jobs:
+  publish-images:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: docker auth
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push backend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend
+          push: true
+          tags: "${{ secrets.DOCKER_IMAGE_BACKEND }}:latest"
+      - name: Build and push frontend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend
+          push: true
+          tags: "${{ secrets.DOCKER_IMAGE_FRONTEND }}:latest"
   deploy:
     runs-on: self-hosted
     steps:
