--- a/.github/workflows/cd-pipeline.yaml
+++ b/.github/workflows/cd-pipeline.yaml
@@ -21,6 +21,7 @@ jobs:
           path: .
 
   publish-images:
+    needs: checkout
     runs-on: ubuntu-latest
     steps:
       - name: download-artifact
