--- a/.github/workflows/cd-pipeline.yaml
+++ b/.github/workflows/cd-pipeline.yaml
@@ -78,8 +78,8 @@ jobs:
 
       - name: Commit report
         run: |
-          git config --global user.name '${{ secrets.USERNAME }}'
-          git config --global user.email '${{ secrets.EMAIL }}'
+          git config --global user.name ${{ secrets.USERNAME }}
+          git config --global user.email ${{ secrets.EMAIL }}
           git commit -am "Updated version on docker image on deployment.yaml"
           git push
         env:
