aplly channges on push

--- a/.github/workflows/cd-pipeline.yaml
+++ b/.github/workflows/cd-pipeline.yaml
@@ -75,16 +75,7 @@ jobs:
       - name: more altering
         run: sed -i '/frontend:/s/$/${{ github.sha }}/' ./frontend/frontend-deployment.yaml
       - run: cat ./frontend/frontend-deployment.yaml
-
-      - name: Commit report
-        run: |
-          git config --global user.name ${{ secrets.USERNAME }}
-          git config --global user.email ${{ secrets.EMAIL }}
-          git commit -am "Updated version on docker image on deployment.yaml"
-          git push
-        env:
-          username: "${{ secrets.USERNAME }}"
-          email: "${{ secrets.EMAIL }}"
+      - run: kubectl --kubeconfig=./.kube/config apply -f ./frontend/frontend-deployment.yaml
 #      - name: Set new backend image
 #        run: kubectl --kubeconfig=./.kube/config set image backend=${{ secrets.DOCKER_IMAGE_BACKEND }}:${{ github.sha }} -f ./backend/backend-deployment.yaml 
 #        env:
